--- a/portfolio.html
+++ b/portfolio.html
@@ -15,41 +15,33 @@
     </head>
     <body>
         <header class="header">
-            <div class="container">
-                <nav class="header-nav">
-                    <a class="logo-header" href="./index.html"
-                        ><span class="web-logo">Web</span>Studio</a
-                    >
-                    <ul class="navigation list">
-                        <li class="nav-item">
-                            <a class="navigation-link" href="./index.html">Студия</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="navigation-link current" href="./portfolio.html">Портфолио</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="navigation-link" href="">Контакты</a>
-                        </li>
-                    </ul>
-                </nav>
-                <ul class="contacts-list list">
-                    <li class="contacts-list-item">
-                        <a class="header-contacts" href="mailto:info@devstudio.com"
-                            >info@devstudio.com</a
-                        >
-                    </li>
-                    <li class="contacts-list-item">
-                        <a class="header-contacts" href="tel:+380961111111">+38 096 111 11 11</a>
-                    </li>
-                </ul>
-            </div>
-        </header>
+        <div class="container holder">
+            <nav class="header-nav holder">
+            <a class="logo-header" href="./index.html"><span class="web-logo">Web</span>Studio</a>
+            <ul class="navigation list holder">
+                <li class="nav-item">
+                    <a class="navigation-link" href="./index.html" >Студия</a>
+                </li>
+                <li class="nav-item">
+                    <a class="navigation-link current" href="./portfolio.html">Портфолио</a>
+                </li>
+                <li class="nav-item">
+                    <a class="navigation-link" href="">Контакты</a>
+                </li>
+            </ul>
+        </nav>
+            <ul class="contacts-list list holder">
+                <li class="contacts-list-item"><a class="header-contacts" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="contacts-list-item"><a class="header-contacts" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </div>
+    </header>
         <!-- Портфолио Портфолио Портфолио Портфолио Портфолио Портфолио -->
         <main>
-            <section class="porfolio">
-                <div class="container section porfolio-box">
+            <section class="porfolio section">
+                <div class="container porfolio-box holder">
                     <h1 hidden>Портфолио</h1>
-                    <ul class="porfolio-list list">
+                    <ul class="porfolio-list list holder">
                         <li class="portfolio-btn">
                             <button type="button" class="portfolio-filter">Все</button>
                         </li>
@@ -66,7 +58,7 @@
                             <button type="button" class="portfolio-filter">Маркетинг</button>
                         </li>
                     </ul>
-                    <ul class="portfolio-cards list">
+                    <ul class="portfolio-cards list holder">
                         <li class="portfolio-cards-item">
                             <img
                                 src="./images/portfolio1.jpg"
