--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 
 <!--                        услуги                -->
 
-            <section class="container activity">
-                <div class="activity-work">
+            <section class=" activity">
+                <div class="activity-work container">
                     <h2 class="activity-work-title">Чем мы занимаемся</h2>
                     <ul class="activity-work-list list holder">
                         <li class="activity-work-item">
@@ -107,10 +107,10 @@
                                 width="370"
                             />
                         </li>
-                        <li class="features-work-item">
+                        <li class="activity-work-item">
                             <img src="./images/img2.jpg" alt="Адаптация сайта" width="370" />
                         </li>
-                        <li class="features-work-item">
+                        <li class="activity-work-item">
                             <img src="./images/img3.jpg" alt="Разработка дизайна" width="370" />
                         </li>
                     </ul>
