--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <main>
             <!-- Герой -->
             <section class="hero">
-                <div class="hero-box">
+                <div class="hero-box container">
                     <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                     <button type="button" class="hero-button">Заказать услугу</button>
                 </div>
